# notes_and_stuff

./: Servercomm.docx  Untitled Diagram.drawio  base_scenario.txt  expr_eval.py  expr_eval_AST.py  rule_definition_file_example.xml  server_client_notes.txt  udp_client  udp_serv
BClient/: CMakeLists.txt  Context.h  Game.cpp  Game.h  MsgParser.cpp  MsgParser.h  NetworkMgr.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  main.cpp
BServer/: CMakeLists.txt  Card.h  Context.h  Dealer.cpp  Dealer.h  MsgParser.cpp  MsgParser.h  NetworkMgr.cpp  NetworkMgr.h  State.cpp  State.h  StateMachine.cpp  Timer.cpp  Timer.h  main.cpp
Baccarat/: CMakeLists.txt
Baccarat/include/: Card.h  Context.h  Dealer.h  Game.h  MsgParser.h  NetworkMgr.h  State.h  StateMachine.h  Timer.h  deckofcards.h
Baccarat/src/: BettingScene.cpp  BettingScene.h  CMakeCache.txt  CMakeLists.txt  Card.h  Context.cpp  Context.h  Dealer.cpp  Dealer.h  Game.cpp  Game.h  GamePlayScene.cpp  GamePlayScene.h  MainMenuScene.cpp  MainMenuScene.h  Makefile  MsgParser.cpp  NetworkMgr.cpp  NetworkMgr.h  Scene.h  State.cpp  StateMachine.cpp  StateMachine.h  Timer.cpp  Timer.h  cmake_install.cmake  compile_commands.json  data  deckofcards.cpp  deckofcards.h  main.cpp
Baccarat/src/states/: Betting.cpp  Betting.h  Dealing.cpp  Dealing.h  EndRound.cpp  EndRound.h  Idle.cpp  Idle.h  State.cpp  State.h
ChatClient/: CMakeLists.txt  main.cpp
ChatServer/: CMakeLists.txt  main.cpp
auto_test/: ArchitecturePlane.txt  Logger.h  errors_log.txt  logger.txt
auto_test/CPPValidator/: CMakeLists.txt  main.cpp
auto_test/ConsoleTestApp/: CMakeLists.txt  main.cpp
new_run/: evaluator.py  log_parser.py  main.py  rules.yaml  rules_parser.py
validator/: DT_explained.txt  Logger.cpp  game_logs.txt  logger  validator.py
whole_run/: json_tree.py  log.txt  log_json.txt  rules.json  rules.xml  script.txt  simple_conditions.py  triggeer_parse.py  validate.py  validate_json.py  validator.py
